# Agrobot-3.0

./: .gitignore  README.md  commit.py
doc/: Doxyfile
install/: install.py  (+5 more)
src/agrobot/: CMakeLists.txt  package.xml
src/agrobot/controller/: controller.py
src/agrobot/launch/: run.launch  simulation.launch
src/agrobot/msg/: complete_command.msg  speed_limit.msg
src/agrobot/scripts/: run_simulation.sh
src/agrobot/server/: start_server.py
src/agrobot/server/src/types/: autoModeParams.ts  controlInterface.ts
src/agrobot/src/: .gitignore  info.json  install_utils.py
src/agrobot/src/config/robot_templates/: agrobot.json  corona_killer.json
src/agrobot/src/nodes/: setup.py
src/agrobot/src/robot_nodes/: command_center.py  control_direction.py  control_mini_robot.py  control_robot.py  control_robot_pwm.py  control_simulation.py  encoder.py  get_robot_commands.py  priority_decider.py  relay.py  setup.py  web_server.py  xyz.py
src/agrobot/src/robot_services/: control_mini_robot.py  control_robot.py  log.py  relay.py
src/agrobot/src/robot_utils/: control_robots.py  install.py  logs.py  nodes.py  params.py  relays.py  services.py  testing.py
src/agrobot/src/services/: log.py
src/agrobot/srv/: control_mini_robot.srv  control_robot.srv  log_error.srv  log_info.srv  relay.srv
src/agrobot/test/: install_test_utils.py  test.py
src/agrobot/test/launch/: test_priority_decider.launch  test_setup.launch
src/agrobot/test/test_robot_nodes/: test_setup.py
src/agrobot/test/test_robot_utils/: log_dependency.py  nodes_dependency.py  params_dependency.py  services_dependency.py
src/lidar/: CMakeLists.txt  info.json  package.xml
src/lidar/launch/: run.launch
src/lidar/msg/: parameters.msg  power_control.msg
src/lidar/src/: install_utils.py
src/lidar/src/lidar_nodes/: dodge_object.py  get_lidar_data.py  movementTiming.py  movement_timing.py  process_lidar.py
src/lidar/src/lidar_services/: log.py
src/lidar/src/lidar_utils/: services.py
src/lidar/srv/: log_error.srv
src/lidar/test/test_lidar_utils/: services_dependency.py
(+74 files in other folders)
