<?xml version="1.0"?>
<package format="2">
  <name>agrobot</name>
  <version>0.1.0</version>
  <description>Robô de multi-propósitos</description>

  <license>BSD</license>
  <url type="website">http://github.com/CaioslppUO/Agrobot-3.0</url>
  <author email="caioslppuo@gmail.com">Caio Cezar das Neves Moreira</author>
  <author email="lucasgrafimar@gmail.com">Lucas garavaglia</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
